# classic-crypto

./: .lycheeignore  Cargo.toml
.github/workflows/: ci.yml  scheduled.yml
src/: lib.rs  main.rs
src/aes/: aes128.rs  hazmat.rs  key_expansion.rs  lut.rs  mix_col.rs  mod.rs  shift_row.rs  state.rs
src/aes/naive/: aes128.rs  key_expansion.rs  lut.rs  mix_col.rs  mod.rs  shift_row.rs  state.rs
src/aes/perf/: mod.rs  rijndael_alg_fst.rs
src/des/: hazmat.rs  mod.rs  permutation.rs
src/num_theory/: mod.rs
src/visual/: mod.rs
