[package]
name = "cns"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "des"
path = "src/bin/des.rs"

[[bin]]
name = "aes-keyexpansion"
path = "src/bin/aes-keyexpansion.rs"

[dependencies]
env_logger = "0.11.3"
log = "0.4.21"
