[package]
name = "cns"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "des"
path = "bin/des.rs"

[[bin]]
name = "aes-keyexpansion"
path = "bin/aes-keyexpansion.rs"

[[bin]]
name = "aes-round"
path = "bin/aes-round.rs"

[[bin]]
name = "aes"
path = "bin/aes.rs"

[dependencies]
env_logger = "0.11.3"
log = "0.4.21"
tabled = "0.15.0"
rand = "0.8.4"

[dev-dependencies]
gf256 = "0.3.0"

[profile.release]
debug = true
